--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                             <img src="https://comisariavirtual.cl/img/icon/chat.png" class="img-service">
                                             <div class="media-body">
                                                 <p class="card-text">
-                                                    Iniciar Permisos temporales SIN ClaveÚnica
+                                                    Iniciar Permisos temporales para levantarse más temprano
                                                 </p>
                                                 <p></p>
                                             </div>
